Path Based Routing in ALB Ingress/Resourcses_file/apache_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: apache
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd:latest  
        ports:
        - containerPort: 80
