Path Based Routing in ALB Ingress/Resourcses_file/apache_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: apache
spec:
  type: NodePort
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
